--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
         <ul class="social-links">
           <li>
             <span class="icon" data-feather="facebook"></span
-            ><a href="https://facebook.com/sandis.sandis.376">Facebook</a>
+            ><a
+              href="https://www.facebook.com/profile.php?id=100068661211226&sfnsn=wiwspwa&mibextid=RUbZ1f"
+              >Facebook</a
+            >
           </li>
           <li>
             <span class="icon" data-feather="twitter"></span
